	  alphanumeric fields (GCOS-specific extension)
	* tree.c: add support for `L` characters in picture strings
	* tree.c (cb_field_variable_address), codegen.c
	  (chk_field_variable_address): do not count REDEFINES when checking
	  varying address
	* field.c (is_elementary_integer): new function to decide whether
	  a field hold elementary Integers
	* field.c (validate_occurs): allow PIC L fields in OCCURS groups
	* field.c (validate_redefines): allow more liberal REDEFINES of
	  fields with PIC L
	* field.c (validate_group): A PIC L data-item cannot be JUSTIFIED
	* codegen.c (chk_field_variable_address): skip REDEFINE fields
	* codegen.c (output_base): do not query for variable addresss when
	  ODOSLIDE is not set
	* codegen.c (output_initialize_uniform): small code refactoring
	* typeck.c (emit_move_corresponding): simplified code

2022-07-08  Simon Sobisch <simonsobisch@gnu.org>

	* parser.y (cancel_body): preparation for CANCEL ALL

2022-06-17  Nicolas Berthier <nicolas.berthier@ocamlpro.com>

	* config.def, typeck.c (cb_emit_accept_name, cb_build_display_name):
	  rely on new option device-mnemonics (boolean) instead of
	  standard-define to accept device name mnemonics for DISPLAY and ACCEPT

2022-07-06  Nicolas Berthier <nicolas.berthier@ocamlpro.com>

	* cobc.h: define function purity attribute COB_A_PURE
	* cobc.h, cobc.c, pplex.l (cobc_get_indicator_column,
	  cobc_get_text_column, cobc_get_indicator, cobc_get_margin_a,
	  cobc_get_margin_b): encapsulate source format-related variables with
	  pure functions
	* cobc.c: drop source format-related macros
	* cobc.c (cobc_print_info): silence a warning with string indexing

2022-07-05  Nicolas Berthier <nicolas.berthier@ocamlpro.com>

	* pplex.l, parser.y: parse DISPLAY and ACCEPT statements in DEFAULT
	  SECTION (GCOS 7 extension)

2022-07-04  Nicolas Berthier <nicolas.berthier@ocamlpro.com>

	FR #29 support for ACUCOBOL-GT Terminal format
	FR #230 support for X/Open Free-form format